--- a/data_science_fundamentals/Aula1.ipynb
+++ b/data_science_fundamentals/Aula1.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,13 +47,33 @@
     {
       "cell_type": "code",
       "source": [
-        "a = 5"
+        "#Informações de entrada\n",
+        "\n",
+        "nome_cliente = \"Joana\"\n",
+        "empresa = \"Edit\"\n",
+        "\n",
+        "# Mensagem Personalizada\n",
+        "\n",
+        "print(\"Olá,\" + nome_cliente + \"! Seja bem-vinda à \" + empresa + \".\")\n",
+        "\n"
       ],
       "metadata": {
-        "id": "F6gDAsbo4Jzn"
+        "id": "F6gDAsbo4Jzn",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6292e0dd-87dd-4207-ffa3-ce84d9704542"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Olá,Joana! Seja bem-vinda à Edit.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -68,12 +87,41 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Preço de venda e custo\n",
+        "\n",
+        "preco_venda = 150.00\n",
+        "custo_produto = 100.00\n",
+        "\n",
+        "# Calculo do lucro\n",
+        "\n",
+        "lucro = preco_venda - custo_produto\n",
+        "\n",
+        "#Exibir Resultado\n",
+        "\n",
+        "print(\"Preço de venda: $\", preco_venda )\n",
+        "print(\"Preço do produto: $\", custo_produto )\n",
+        "print(\"Lucro: $\", lucro )\n"
+      ],
       "metadata": {
-        "id": "2H-CWaoy4NIp"
+        "id": "2H-CWaoy4NIp",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d26774d4-c2e1-4c1e-a1ba-776eebc14c6b"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Preço de venda: $ 150.0\n",
+            "Preço do produto: $ 100.0\n",
+            "Lucro: $ 50.0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -87,12 +135,44 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Variaveis\n",
+        "preco_original = float(input(\"Insira o valor do preço: \"))\n",
+        "desconto_percentual = 20\n",
+        "\n",
+        "#calculo do preço com desconto\n",
+        "\n",
+        "desconto = ( preco_original * desconto_percentual )/ 100\n",
+        "preco_final = preco_original - desconto\n",
+        "\n",
+        "#Exibir valores\n",
+        "\n",
+        "print(\"Preço original: $\", preco_original)\n",
+        "print(\"Desconto: $\", desconto)\n",
+        "print(\"Preço final\", preco_final)\n",
+        "\n",
+        "\n"
+      ],
       "metadata": {
-        "id": "L2n6E-rC4P0B"
+        "id": "L2n6E-rC4P0B",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e10c6836-c174-430e-dc7e-4433dd2c3f72"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Insira o valor do preço: 150.45\n",
+            "Preço original: $ 150.45\n",
+            "Desconto: $ 30.09\n",
+            "Preço final 120.35999999999999\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -108,12 +188,40 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Variaveis\n",
+        "\n",
+        "mes1_vendas = int(input(\"Insira o valor das vendas no Mes 1: \"))\n",
+        "mes2_vendas = int(input(\"Insira o valor das vendas no Mes 2: \"))\n",
+        "\n",
+        "#Comparacao\n",
+        "try:\n",
+        "  resultado_percentual = ((mes2_vendas - mes1_vendas)/(mes1_vendas))*100\n",
+        "except:\n",
+        "  print(\"An exception occurred\")\n",
+        "#Exibicao\n",
+        "print(\"Resultado %: \", resultado_percentual, \" %\")\n",
+        "\n"
+      ],
       "metadata": {
-        "id": "oz0PyPmQ4TOU"
+        "id": "oz0PyPmQ4TOU",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "73d8b5e8-0f5e-43cf-9f77-1de67e52e77f"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Insira o valor das vendas no Mes 1: 100\n",
+            "Insira o valor das vendas no Mes 2: 120\n",
+            "Resultado %:  20.0  %\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -127,12 +235,36 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Vendas atuais e crescimento esperado\n",
+        "\n",
+        "vendas_atuais = 1000\n",
+        "\n",
+        "crescimento_percentual = 34\n",
+        "\n",
+        "# Calculo das vendas esperadas\n",
+        "\n",
+        "vendas_esperadas = vendas_atuais * (1+crescimento_percentual/100)\n",
+        "\n",
+        "print(\"Vendas esperadas: \", vendas_esperadas)"
+      ],
       "metadata": {
-        "id": "2rcmvaUR4WHj"
+        "id": "2rcmvaUR4WHj",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "395c1965-7563-42f4-9194-96b7a544bc0f"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Vendas esperadas:  1340.0\n"
+          ]
+        }
+      ]
     }
   ]
 }
