Criado através do Colab

--- a/data_science_fundamentals/Aula_03.ipynb
+++ b/data_science_fundamentals/Aula_03.ipynb
@@ -3,11 +3,11 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/andreiacampos98/datascience_course/blob/main/C%C3%B3pia_de_Aula_03.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/andreiacampos98/datascience_course/blob/main/data_science_fundamentals/Aula_03.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -215,15 +215,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "SDm-E5mWuIuv",
-        "outputId": "f979ab24-151d-4100-84b2-f8e7bca718db"
+        "outputId": "ded02f33-bccd-4d0c-a7c8-84d9485bdaed"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{'Baja Taco': 4.25, 'Burrito': 7.5, 'Bowl': 8.5, 'Nachos': 11.0, 'Quesadilla': 8.5, 'Super Burrito': 8.5, 'Super Quesadilla': 9.5, 'Taco': 3.0, 'Tortilla Salad': 8.0}\n",
+            "O que deseja? Se não pretender adicionar mais nenhum item por favor digite 'sair'. burrito\n",
+            "Total a pagar: $7.50\n",
+            "O que deseja? Se não pretender adicionar mais nenhum item por favor digite 'sair'. super quesadilla\n",
+            "Total a pagar: $17.00\n",
+            "O que deseja? Se não pretender adicionar mais nenhum item por favor digite 'sair'. sair\n"
+          ]
+        }
+      ],
       "source": [
         "menu= {\n",
         "    \"Baja Taco\": 4.25,\n",
@@ -238,17 +251,20 @@
         "}\n",
         "\n",
         "def main ():\n",
+        "    print(menu)\n",
         "\n",
         "    total=0\n",
         "    try:\n",
         "        while True:\n",
-        "            item=input(\"Item: \").title()\n",
+        "            item=input(\"O que deseja? Se não pretender adicionar mais nenhum item por favor digite 'sair'. \").title()\n",
+        "            if item=='Sair':\n",
+        "              break\n",
         "            if item in menu:\n",
         "                total+=menu[item]\n",
-        "                print(f'total: ${total:.2f}')\n",
+        "                print(f'Total a pagar: ${total:.2f}')\n",
         "            else:\n",
-        "                item=input(\"Item: \").title()\n",
-        "\n",
+        "              print(\"O item que inseriu nao está disponivel. Por favor escolha um novo item.\")\n",
+        "        print(f'Total a pagar: ${total:.2f}')\n",
         "    except EOFError:\n",
         "            print(f'total: ${total:.2f}')\n",
         "\n",
@@ -268,12 +284,56 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {
-        "id": "39SUGO7AuN62"
+        "id": "39SUGO7AuN62",
+        "outputId": "574582b2-c8fc-455e-d7a5-122c47314e0c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'Baja Taco': 4.25, 'Burrito': 7.5, 'Bowl': 8.5, 'Nachos': 11.0, 'Quesadilla': 8.5, 'Super Burrito': 8.5, 'Super Quesadilla': 9.5, 'Taco': 3.0, 'Tortilla Salad': 8.0}\n",
+            "O que deseja? Se não pretender adicionar mais nenhum item por favor digite 'sair'. taco\n",
+            "Total a pagar: $3.00\n",
+            "O que deseja? Se não pretender adicionar mais nenhum item por favor digite 'sair'. taco\n",
+            "Total a pagar: $6.00\n",
+            "O que deseja? Se não pretender adicionar mais nenhum item por favor digite 'sair'. sair\n",
+            "Total a pagar: $6.00\n",
+            "O seu pedido contém os seguintes items: {'Taco': 2}\n"
+          ]
+        }
+      ],
+      "source": [
+        "def main ():\n",
+        "    print(menu)\n",
+        "    pedido={}\n",
+        "    total=0\n",
+        "    try:\n",
+        "        while True:\n",
+        "            item=input(\"O que deseja? Se não pretender adicionar mais nenhum item por favor digite 'sair'. \").title()\n",
+        "            if item=='Sair':\n",
+        "              break\n",
+        "            if item in menu:\n",
+        "                total+=menu[item]\n",
+        "                if item not in pedido.keys():\n",
+        "                  pedido[item] = 1\n",
+        "                elif item in pedido.keys():\n",
+        "                  pedido[item] += 1\n",
+        "                print(f'Total a pagar: ${total:.2f}')\n",
+        "            else:\n",
+        "              print(\"O item que inseriu nao está disponivel. Por favor escolha um novo item.\")\n",
+        "        print(f'O seu pedido contém os seguintes items: {pedido}')\n",
+        "        print(f'Total a pagar: ${total:.2f}')\n",
+        "    except EOFError:\n",
+        "            print(f'total: ${total:.2f}')\n",
+        "\n",
+        "main()"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -354,8 +414,8 @@
   ],
   "metadata": {
     "colab": {
-      "include_colab_link": true,
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": ".venv",
