Criado através do Colab

--- a/data_science_fundamentals/Aula_03.ipynb
+++ b/data_science_fundamentals/Aula_03.ipynb
@@ -287,10 +287,10 @@
       "execution_count": 18,
       "metadata": {
         "id": "39SUGO7AuN62",
-        "outputId": "574582b2-c8fc-455e-d7a5-122c47314e0c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "574582b2-c8fc-455e-d7a5-122c47314e0c"
       },
       "outputs": [
         {
@@ -347,12 +347,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
-        "id": "yqH_hzPsuV_X"
+        "id": "yqH_hzPsuV_X",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "48737cbd-5d34-4af3-b618-f1dc3229dc6f"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "O Pedido #1 está pronto\n",
+            "O Pedido #2 está pronto\n",
+            "O Pedido #4 está pronto\n",
+            "O Pedido #3 está pronto\n"
+          ]
+        }
+      ],
+      "source": [
+        "pedidos={'Pedido #1', 'Pedido #2', 'Pedido #3', 'Pedido #4'}\n",
+        "for pedido in pedidos:\n",
+        "  print(f'O {pedido} está pronto')"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -366,12 +385,39 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {
-        "id": "-QGzs7A1ubNo"
+        "id": "-QGzs7A1ubNo",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "934f3edf-3d98-489b-fab1-7f3ef868c0e7"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['Nachos', 'Taco']\n"
+          ]
+        }
+      ],
+      "source": [
+        "menu_valores_nutricionais= {\n",
+        "    \"Baja Taco\": 680,\n",
+        "    \"Burrito\": 750,\n",
+        "    \"Bowl\": 850,\n",
+        "    \"Nachos\": 100,\n",
+        "    \"Quesadilla\": 850,\n",
+        "    \"Super Burrito\": 850,\n",
+        "    \"Super Quesadilla\": 950,\n",
+        "    \"Taco\": 300,\n",
+        "    \"Tortilla Salad\": 800\n",
+        "}\n",
+        "menu_inferior_500=[]\n",
+        "menu_inferior_500 = [prato for prato in menu_valores_nutricionais if menu_valores_nutricionais[prato] < 500]\n",
+        "print(menu_inferior_500)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -385,12 +431,60 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "metadata": {
-        "id": "y3ixRDjhuf8O"
+        "id": "y3ixRDjhuf8O",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "bc0f3a57-265a-40cd-9ca1-8d6aedc6296a"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'Baja Taco': 4.25, 'Burrito': 7.5, 'Bowl': 8.5, 'Nachos': 11.0, 'Quesadilla': 8.5, 'Super Burrito': 8.5, 'Super Quesadilla': 9.5, 'Taco': 3.0, 'Tortilla Salad': 8.0}\n",
+            "O que deseja? Se não pretender adicionar mais nenhum item por favor digite 'sair'. taco\n",
+            "Total a pagar: $2.40\n",
+            "O que deseja? Se não pretender adicionar mais nenhum item por favor digite 'sair'. super burrito\n",
+            "Total a pagar: $10.90\n",
+            "O que deseja? Se não pretender adicionar mais nenhum item por favor digite 'sair'. sair\n",
+            "O seu pedido contém os seguintes items: {'Taco': 1, 'Super Burrito': 1}\n",
+            "Total a pagar: $10.90\n"
+          ]
+        }
+      ],
+      "source": [
+        "def main ():\n",
+        "    print(menu)\n",
+        "    pedido={}\n",
+        "    total=0\n",
+        "    try:\n",
+        "        while True:\n",
+        "            item=input(\"O que deseja? Se não pretender adicionar mais nenhum item por favor digite 'sair'. \").title()\n",
+        "            if item=='Sair':\n",
+        "              break\n",
+        "            if item in menu:\n",
+        "                if item=='Taco':\n",
+        "                  total+=menu[item] * 0.8\n",
+        "                else:\n",
+        "                  total+=menu[item]\n",
+        "                if item not in pedido.keys():\n",
+        "                  pedido[item] = 1\n",
+        "                elif item in pedido.keys():\n",
+        "                  pedido[item] += 1\n",
+        "                print(f'Total a pagar: ${total:.2f}')\n",
+        "            else:\n",
+        "              print(\"O item que inseriu nao está disponivel. Por favor escolha um novo item.\")\n",
+        "        print(f'O seu pedido contém os seguintes items: {pedido}')\n",
+        "        print(f'Total a pagar: ${total:.2f}')\n",
+        "    except EOFError:\n",
+        "            print(f'total: ${total:.2f}')\n",
+        "\n",
+        "main()\n",
+        "\n"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -404,12 +498,84 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "metadata": {
-        "id": "cQ1SWYU-ukXA"
+        "id": "cQ1SWYU-ukXA",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "43208eaa-891a-4d53-f68b-8053509c3779"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'Baja Taco': 4.25, 'Burrito': 7.5, 'Bowl': 8.5, 'Nachos': 11.0, 'Quesadilla': 8.5, 'Super Burrito': 8.5, 'Super Quesadilla': 9.5, 'Taco': 3.0, 'Tortilla Salad': 8.0}\n",
+            "O que deseja? Se não pretender adicionar mais nenhum item por favor digite 'sair'. taco\n",
+            "Total a pagar: $3.00\n",
+            "O que deseja? Se não pretender adicionar mais nenhum item por favor digite 'sair'. taco\n",
+            "Total a pagar: $6.00\n",
+            "O que deseja? Se não pretender adicionar mais nenhum item por favor digite 'sair'. taco\n",
+            "Total a pagar: $9.00\n",
+            "O que deseja? Se não pretender adicionar mais nenhum item por favor digite 'sair'. taco\n",
+            "Total a pagar: $12.00\n",
+            "O que deseja? Se não pretender adicionar mais nenhum item por favor digite 'sair'. taco\n",
+            "Não temos stock deste item Taco: 0\n",
+            "O que deseja? Se não pretender adicionar mais nenhum item por favor digite 'sair'. super quesadilla\n",
+            "Total a pagar: $21.50\n",
+            "O que deseja? Se não pretender adicionar mais nenhum item por favor digite 'sair'. super quesadilla\n",
+            "Não temos stock deste item Super Quesadilla: 0\n",
+            "O que deseja? Se não pretender adicionar mais nenhum item por favor digite 'sair'. sair\n",
+            "O seu pedido contém os seguintes items: {'Taco': 4, 'Super Quesadilla': 1}\n",
+            "Total a pagar: $21.50\n",
+            "{'Baja Taco': 5, 'Burrito': 2, 'Bowl': 1, 'Nachos': 2, 'Quesadilla': 3, 'Super Burrito': 2, 'Super Quesadilla': 0, 'Taco': 0, 'Tortilla Salad': 5}\n"
+          ]
+        }
+      ],
+      "source": [
+        "stock= {\n",
+        "    \"Baja Taco\": 5,\n",
+        "    \"Burrito\": 2,\n",
+        "    \"Bowl\": 1,\n",
+        "    \"Nachos\": 2,\n",
+        "    \"Quesadilla\": 3,\n",
+        "    \"Super Burrito\": 2,\n",
+        "    \"Super Quesadilla\": 1,\n",
+        "    \"Taco\": 4,\n",
+        "    \"Tortilla Salad\": 5\n",
+        "}\n",
+        "\n",
+        "def main ():\n",
+        "    print(menu)\n",
+        "    pedido={}\n",
+        "    total=0\n",
+        "    try:\n",
+        "        while True:\n",
+        "            item=input(\"O que deseja? Se não pretender adicionar mais nenhum item por favor digite 'sair'. \").title()\n",
+        "            if item=='Sair':\n",
+        "              break\n",
+        "            if item in menu:\n",
+        "              if stock[item] <= 0:\n",
+        "                print(f'Não temos stock deste item {item}: {stock[item]}')\n",
+        "              else:\n",
+        "                total+=menu[item]\n",
+        "                if item not in pedido.keys():\n",
+        "                  pedido[item] = 1\n",
+        "                elif item in pedido.keys():\n",
+        "                  pedido[item] += 1\n",
+        "                print(f'Total a pagar: ${total:.2f}')\n",
+        "                stock[item] -= 1\n",
+        "            else:\n",
+        "              print(\"O item que inseriu nao está disponivel. Por favor escolha um novo item.\")\n",
+        "        print(f'O seu pedido contém os seguintes items: {pedido}')\n",
+        "        print(f'Total a pagar: ${total:.2f}')\n",
+        "        print(stock)\n",
+        "    except EOFError:\n",
+        "            print(f'total: ${total:.2f}')\n",
+        "\n",
+        "main()"
+      ]
     }
   ],
   "metadata": {
