Criado através do Colab

--- a/data_science_fundamentals/Aula03.ipynb
+++ b/data_science_fundamentals/Aula03.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/andreiacampos98/datascience_course/blob/main/data_science_fundamentals/Aula_03.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/andreiacampos98/datascience_course/blob/main/data_science_fundamentals/Aula03.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -31,18 +31,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "XM2hGuNotUy0",
-        "outputId": "2b315b53-8f4a-4a7a-d9d9-f701bfed0c9d"
+        "outputId": "753e2a06-4557-4a83-dc64-9a4a77e787fb"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "o menu de hoje é: \n",
             "pao\n",
@@ -120,22 +120,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "fwDxJ6ZtuAu3",
-        "outputId": "b188a5eb-b1d2-4786-a9cb-44dbce5dcc8d"
+        "outputId": "49c95b41-4cca-4a9b-9e73-0d635574ebfa"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Escolha um prato:\n",
+            "Quando terminar o seu pedido escreva 'sair'! pao\n",
+            "pedido aceite\n",
+            "Escolha um prato:\n",
+            "Quando terminar o seu pedido escreva 'sair'! azeitonas\n",
+            "pedido aceite\n",
+            "Escolha um prato:\n",
             "Quando terminar o seu pedido escreva 'sair'! sair\n",
-            "[]\n"
+            "['pao', 'azeitonas']\n",
+            "pao\n",
+            "azeitonas\n",
+            "Pedido é : pao , azeitonas\n"
           ]
         }
       ],
@@ -151,7 +160,11 @@
         "  else:\n",
         "    print(f\"hoje não temos esse belo prato!\\nPor favor escolha um dos seguintes pratos: {menu} \")\n",
         "\n",
-        "print(pedido_cliente)"
+        "print(pedido_cliente)\n",
+        "for i in pedido_cliente:\n",
+        "  print(i)\n",
+        "\n",
+        "print(f\"Você pediu : {' , '.join(pedido_cliente)}\")"
       ]
     },
     {
@@ -215,7 +228,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -284,7 +297,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "id": "39SUGO7AuN62",
         "colab": {
@@ -347,7 +360,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "id": "yqH_hzPsuV_X",
         "colab": {
@@ -385,7 +398,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "id": "-QGzs7A1ubNo",
         "colab": {
@@ -431,7 +444,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "id": "y3ixRDjhuf8O",
         "colab": {
@@ -498,7 +511,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
         "id": "cQ1SWYU-ukXA",
         "colab": {
