Criado através do Colab

--- a/data_science_fundamentals/Aula03.ipynb
+++ b/data_science_fundamentals/Aula03.ipynb
@@ -282,7 +282,76 @@
         "            print(f'total: ${total:.2f}')\n",
         "\n",
         "main()\n",
+        "\n",
+        "\n",
+        "\n",
         "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#solucao da aula\n",
+        "menu= {\n",
+        "    \"Baja Taco\": 4.25,\n",
+        "    \"Burrito\": 7.50,\n",
+        "    \"Bowl\": 8.50,\n",
+        "    \"Nachos\": 11.00,\n",
+        "    \"Quesadilla\": 8.50,\n",
+        "    \"Super Burrito\": 8.50,\n",
+        "    \"Super Quesadilla\": 9.50,\n",
+        "    \"Taco\": 3.00,\n",
+        "    \"Tortilla Salad\": 8.00\n",
+        "}\n",
+        "pedidos=[\"Quesadilla\"]\n",
+        "total_novo=0\n",
+        "for i in pedidos:\n",
+        "  if i in menu:\n",
+        "    total_novo +=menu[i]\n",
+        "\n",
+        "print(total_novo)"
+      ],
+      "metadata": {
+        "id": "W3KgFNiWNcQ4",
+        "outputId": "ce98545a-52bc-4e40-c00f-554ba4b930c8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "8.5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#usando comprehension list e sum\n",
+        "total = sum(menu[i] for i in pedidos)\n",
+        "print(total)"
+      ],
+      "metadata": {
+        "id": "VwXLdQfDNhJ3",
+        "outputId": "d3dd74dd-d061-482d-f81d-b6a52a4e1a1f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "8.5\n"
+          ]
+        }
       ]
     },
     {
