--- a/Exercicio_aula_04.ipynb
+++ b/Exercicio_aula_04.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPCfwXlbpJkG17oM5rASyq7",
+      "authorship_tag": "ABX9TyMnOgPt653JL+X/jc0AdP+n",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -144,9 +144,11 @@
     {
       "cell_type": "code",
       "source": [
-        "lista = [1, 8, 27, 125, 343, 512, 729, 1000]\n",
+        "lista=[1, 8, 27, 125, 343, 512, 729, 1000]\n",
+        "teste =map(lambda x: x%2==0, lista)\n",
         "pares = filter(lambda x: x % 2 == 0, lista)\n",
         "impares = filter(lambda x: x % 2 != 0, lista)\n",
+        "print(list(teste))\n",
         "print(list(pares))\n",
         "print(list(impares))"
       ],
@@ -155,14 +157,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_RQLfz6HvnBZ",
-        "outputId": "b07efb99-7ccd-4a6a-ac8d-44e26d2f10ec"
+        "outputId": "e0d23340-9f39-4adb-edd5-4c33de417ccd"
       },
-      "execution_count": 22,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "[False, True, False, False, False, True, False, True]\n",
             "[8, 512, 1000]\n",
             "[1, 27, 125, 343, 729]\n"
           ]
@@ -180,12 +183,66 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def par_impar(x, y):\n",
+        "  lista=list(range(x,y+1))\n",
+        "  print(lista)\n",
+        "\n",
+        "\n",
+        "par_impar(10,25)\n"
+      ],
       "metadata": {
-        "id": "FmFF0P89wcD6"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FmFF0P89wcD6",
+        "outputId": "8f135c57-6911-409f-bb9c-11297d8e82b4"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def encontrar_numeros_pares(X, Y):\n",
+        "    # Lista para armazenar números com todos os dígitos pares\n",
+        "    numeros_pares = []\n",
+        "    for n in range(X, Y + 1):\n",
+        "        # Verificar se todos os dígitos são pares\n",
+        "        if all(int(d) % 2 == 0 for d in str(n)):\n",
+        "            numeros_pares.append(n)\n",
+        "    # Imprimir os números separados por vírgulas\n",
+        "    print(\", \".join(map(str, numeros_pares)))\n",
+        "# Exemplo de uso\n",
+        "X = 10\n",
+        "Y = 50\n",
+        "encontrar_numeros_pares(X, Y)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GQ19Ze3K26Pp",
+        "outputId": "ee4a9d84-c0f1-4a74-b15c-40c556d9c349"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "20, 22, 24, 26, 28, 40, 42, 44, 46, 48\n"
+          ]
+        }
+      ]
     }
   ]
 }
