Criado através do Colab

--- a/Lista_exercicios_02.ipynb
+++ b/Lista_exercicios_02.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNMXrf45mpDdRpMOc62l+jE",
+      "authorship_tag": "ABX9TyNw6BUA/8v1ahgLpqYe8m3C",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -164,12 +164,42 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def  converter_temperatura(temperatura, formato):\n",
+        "  if formato==\"F\":\n",
+        "    conversao= temperatura*(9/5) + 32\n",
+        "    return conversao\n",
+        "  elif formato==\"K\":\n",
+        "    conversao=temperatura + 273.15\n",
+        "    return conversao\n",
+        "  else:\n",
+        "    print(\"O formato inserido não é válido.\")\n",
+        "    return\n",
+        "\n",
+        "\n",
+        "\n",
+        "print(converter_temperatura(25, \"F\")) # Saída: 77.0\n",
+        "\n",
+        "print(converter_temperatura(0, \"K\")) # Saída: 273.15"
+      ],
       "metadata": {
-        "id": "-1Wb8TwXx2lw"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-1Wb8TwXx2lw",
+        "outputId": "b1349a17-8ae4-44c6-ba50-2fa3f4d60f63"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "77.0\n",
+            "273.15\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -196,12 +226,35 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def filtrar_palavras(palavras, min_tamanho):\n",
+        "  nova_lista=[]\n",
+        "  for palavra in palavras:\n",
+        "    if len(palavra)>= min_tamanho:\n",
+        "      nova_lista.append(palavra)\n",
+        "  return nova_lista\n",
+        "\n",
+        "\n",
+        "palavras = [\"python\", \"função\", \"exemplo\", \"lista\", \"filtrar\"]\n",
+        "print(filtrar_palavras(palavras, min_tamanho=6))"
+      ],
       "metadata": {
-        "id": "bS8dBwd5yMxn"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bS8dBwd5yMxn",
+        "outputId": "361669e4-3e8a-4d66-b4b9-3f2c245de4a6"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['python', 'função', 'exemplo', 'filtrar']\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
