--- a/Lista_exercicios_02.ipynb
+++ b/Lista_exercicios_02.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNw6BUA/8v1ahgLpqYe8m3C",
+      "authorship_tag": "ABX9TyOgpW5FOvPJgQ9AGkjTf4bv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -279,12 +279,36 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def fatorial(numero: int) -> int:\n",
+        "  if numero==1 or numero==0:\n",
+        "    return 1\n",
+        "  numero_fatorial=numero * fatorial(numero - 1)\n",
+        "  return numero_fatorial\n",
+        "\n",
+        "\n",
+        "print(fatorial(5)) # Saída: 120\n",
+        "\n",
+        "print(fatorial(0)) # Saída: 1"
+      ],
       "metadata": {
-        "id": "1QpSpOBdyRbB"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1QpSpOBdyRbB",
+        "outputId": "e3907303-4456-460d-956e-e4f7e31cf3e3"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "120\n",
+            "1\n"
+          ]
+        }
+      ]
     }
   ]
 }
