Criado através do Colab

--- a/data_science_fundamentals/Lista_Exercicios_01.ipynb
+++ b/data_science_fundamentals/Lista_Exercicios_01.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPePdBBMkybWEISrXimKQHK",
+      "authorship_tag": "ABX9TyOcVn0HFa+91Hars3cEpOQe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/andreiacampos98/datascience_course/blob/main/data_science_fundamentals/Exercicios.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/andreiacampos98/datascience_course/blob/main/data_science_fundamentals/Lista_Exercicios_01.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -93,29 +93,53 @@
     {
       "cell_type": "code",
       "source": [
+        "#Usar o input sem definir o tipo de variável que vamos guardar. Por defaul é string\n",
         "nome_movel_user=input('Por favor indique o nome do movel? ').lower()\n",
-        "preco_user=int(input('Por favor indique o preço do movel? '))\n",
+        "preco_user=input('Por favor indique o preço do movel? ')\n",
+        "quantidade_stock_user=input('Por favor indique a quantidade de stock do movel? ')\n",
+        "\n",
+        "print(f'Nome do movel: {nome_movel_user}, preço {preco_user}€, quantidade em stock {quantidade_stock_user}')\n",
+        "print(f'O nome do movel é uma variavel do tipo {type(nome_movel_user)} \\n\\\n",
+        "        o preço do movel é uma variavel do tipo  {type(preco_user)} \\n\\\n",
+        "        a quantidade de stock é uma variavel do tipo  {type(quantidade_stock_user)}')\n",
+        "\n",
+        "#Usar o input definindo o tipo de variaveis\n",
+        "nome_movel_user=input('Por favor indique o nome do movel? ').lower()\n",
+        "preco_user=float(input('Por favor indique o preço do movel? '))\n",
         "quantidade_stock_user=int(input('Por favor indique a quantidade de stock do movel? '))\n",
         "\n",
-        "print(f'Nome do movel: {nome_movel_user}, preço {preco_user}€, quantidade em stock {quantidade_stock_user}')"
+        "print(f'Nome do movel: {nome_movel_user}, preço {preco_user}€, quantidade em stock {quantidade_stock_user}')\n",
+        "print(f'O nome do movel é uma variavel do tipo {type(nome_movel_user)} \\n\\\n",
+        "        o preço do movel é uma variavel do tipo  {type(preco_user)} \\n\\\n",
+        "        a quantidade de stock é uma variavel do tipo  {type(quantidade_stock_user)}')"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "j-SAgWe6FyO-",
-        "outputId": "9c71a1bc-16c9-4705-8fa8-265aed22e62c"
+        "outputId": "bb23293a-d2ec-4978-faf4-22ef40640220"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Por favor indique o nome do movel? secretaria\n",
-            "Por favor indique o preço do movel? 159\n",
-            "Por favor indique a quantidade de stock do movel? 5\n",
-            "Nome do movel: secretaria, preço 159€, quantidade em stock 5\n"
+            "Por favor indique o preço do movel? 10\n",
+            "Por favor indique a quantidade de stock do movel? 10\n",
+            "Nome do movel: secretaria, preço 10€, quantidade em stock 10\n",
+            "O nome do movel é uma variavel do tipo <class 'str'> \n",
+            "        o preço do movel é uma variavel do tipo  <class 'str'> \n",
+            "        a quantidade de stock é uma variavel do tipo  <class 'str'>\n",
+            "Por favor indique o nome do movel? secretaria\n",
+            "Por favor indique o preço do movel? 10\n",
+            "Por favor indique a quantidade de stock do movel? 10\n",
+            "Nome do movel: secretaria, preço 10.0€, quantidade em stock 10\n",
+            "O nome do movel é uma variavel do tipo <class 'str'> \n",
+            "        o preço do movel é uma variavel do tipo  <class 'float'> \n",
+            "        a quantidade de stock é uma variavel do tipo  <class 'int'>\n"
           ]
         }
       ]
@@ -138,9 +162,9 @@
         "if comprar=='sim':\n",
         "  print(\"O seu movel foi reservado.\")\n",
         "elif comprar=='nao':\n",
-        "  print(\"Obrigada pela sua visita! Volte sempre!\")\n",
+        "  print(\"O móvel continua disponível\")\n",
         "else:\n",
-        "  print(\"Não digitou sim nem não. Obrigada.\")"
+        "  print(\"Não digitou 'sim' nem 'não'. Obrigada.\")"
       ],
       "metadata": {
         "colab": {
@@ -221,17 +245,17 @@
         "while segundos > 0:\n",
         "  print(f\"{segundos}\")\n",
         "  segundos-=1\n",
-        "  if segundos == 0:\n",
-        "    print(\"A época de descontos está oficialmente aberta\")\n"
+        "\n",
+        "print(\"A época de descontos está oficialmente aberta\")\n"
       ],
       "metadata": {
         "id": "5eyB6vYE7x5w",
-        "outputId": "866c5be9-ba60-437f-df03-5a30d82f06e5",
+        "outputId": "db9e70a0-7fb1-4bd0-c4d5-e2971d19b6dd",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -262,13 +286,13 @@
     {
       "cell_type": "code",
       "source": [
-        "list=[]\n",
+        "lista=[]\n",
         "while True:\n",
         "  movel=input(\"Adicione os móveis que desejar ao carrinho de compras. Se nao quiser adicionar mais nenhum móvel, escreva 'sair'. \").lower()\n",
         "  if movel=='sair':\n",
         "    break\n",
-        "  list.append(movel)\n",
-        "print(f\"No carrinho de compras tem os seguintes items: {list}\")\n"
+        "  lista.append(movel)\n",
+        "print(f\"No carrinho de compras tem os seguintes items: {lista}\")\n"
       ],
       "metadata": {
         "id": "_t1Tn-pq-K0_",
@@ -277,7 +301,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -316,7 +340,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -355,7 +379,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -397,7 +421,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -437,7 +461,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
